# sdl3_webcam

./: .gitignore  CMakeLists.txt  README.md
include/: config.h
src/: main.c
